@@ -1,3 +1,9 @@
+2012-01-24  Andrew Robinson  <arobinso@redhat.com>
+
+	Bug #210014.
+
+	* pdebuild/eclipse-copy-platform.sh: Make symlinking paths relative.
+
 2012-01-20  Roland Grunberg  <rgrunber@redhat.com>
 
 	* build.xml: Create proper org.junit_3* and org.junit_4* jar files by
